[package]
name = "pps-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = { version = "0.27", features = ["ioctl", "time"] }
strum = { version = "0.25", features = ["derive"] }
strum_macros = "0.25"
thiserror = "1.0"